# PlantBook

./: .gitignore  CLAUDE.md  README.md  template.logtail.sh
book_formatter/: .gitignore  main.py  pyproject.toml  template.main.sh  test.py
book_formatter/book_formatter/: __main__.py  book_formatter.py  values.py
book_formatter/book_formatter/templates/: index.jinja2  plantbook.css
book_formatter/book_formatter/templates/photoswipe/: photoswipe-dynamic-caption-plugin.css
book_formatter/book_formatter/templates/tabs/: LICENSE.txt  README.md  script.js  style.css
book_formatter/snippets/: snippets.py
book_formatter/tests/: test_loading.py  test_snippets.py
plant-book.lrdevplugin/: ExportBookFiles.lua  Info.lua  MetadataDefinition.lua  PublishServiceProvider.lua  Tagset.lua
