[tool.poetry]
name = "book_formatter"
version = "0.1.0"
description = ""
authors = ["Gordon Krefting <gordon@krefting.org>"]
readme = "README.md"
packages = [{include = "book_formatter"}]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
pytest = "^7.4.0"
imagesize = "^1.4.1"
python-dateutil = "^2.8.2"
requests = "^2.31.0"
sortedcontainers = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
